# Vex-V5-Python-Interpreter

./: .gitignore  215test.v5python  Documentation.md  main.py  pyproject.toml  test.v5python
src/: main.py
src/VexV5Interpreter/: main.py
